themes/anatole/assets/css/custom.css
@font-face {
    font-family: 'fontello';
    src: url('../font/fontello.eot?32791864');
    src: url('../font/fontello.eot?32791864#iefix') format('embedded-opentype'),
         url('../font/fontello.woff2?32791864') format('woff2'),
         url('../font/fontello.woff?32791864') format('woff'),
         url('../font/fontello.ttf?32791864') format('truetype'),
         url('../font/fontello.svg?32791864#fontello') format('svg');
    font-weight: normal;
    font-style: normal;
  }
  /* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
  /* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
  /*
  @media screen and (-webkit-min-device-pixel-ratio:0) {
    @font-face {
      font-family: 'fontello';
      src: url('../font/fontello.svg?32791864#fontello') format('svg');
    }
  }
  */
  [class^="icon-"]:before, [class*=" icon-"]:before {
    font-family: "fontello";
    font-style: normal;
    font-weight: normal;
    speak: never;
  
    display: inline-block;
    text-decoration: inherit;
    width: 1em;
    margin-right: .2em;
    text-align: center;
    /* opacity: .8; */
  
    /* For safety - reset parent styles, that can break glyph codes*/
    font-variant: normal;
    text-transform: none;
  
    /* fix buttons height, for twitter bootstrap */
    line-height: 1em;
  
    /* Animation center compensation - margins should be symmetric */
    /* remove if not needed */
    margin-left: .2em;
  
    /* you can be more comfortable with increased icons size */
    /* font-size: 120%; */
  
    /* Font smoothing. That was taken from TWBS */
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
  
    /* Uncomment for 3D effect */
    /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
  }
  
  .icon-calendar-inv:before { content: '\e800'; } /* '' */
  .icon-stopwatch:before { content: '\e801'; } /* '' */
  .icon-twitter:before { content: '\f099'; } /* '' */
  .icon-github-circled:before { content: '\f09b'; } /* '' */
  .icon-mail-alt:before { content: '\f0e0'; } /* '' */
  .icon-linkedin-squared:before { content: '\f30c'; } /* '' */

p, .post .post-content ol, .post .post-content ul, .list-with-title {
    font-size: 18px;
}

.post .post-title h3 {
    text-transform: none;
    font-size: 26px;
    color: #000;
}

.post .post-content h2 {
    font-size: 26px;
    margin-top: 40px;
    color: #000;
}

.list-with-title .listing-title {
    font-size: 26px;
    color: #000;
}

.category {
    border-radius: 0px;
}

.category {
    padding: 4px 6px;
    border-radius: 0px;
    color: #fff !important;
    background-color: #ca2017;
    font-weight: bold;
    border: 1px solid #ca2017;
}

.post .post-content a {
    color: #ca2017;
    letter-spacing: 0px;
    text-decoration: underline;
}

.post .post-content a:hover {
    color: #ca2017;
    text-decoration: none;
}

.description p {
    margin-top: 0px;
}

.sidebar .logo-title .title h3 {
    margin-bottom: 0.1em;
}

body {
    font-family: 'Poppins', sans-serif;
}

.post .post-footer .meta .info {
    font-size: 14px;
}

.info {
    margin: 1em;
    margin-left: 0.1em;
}


a {
    color: #ca2017;
}

a:hover, a:active {
    color: #ca2017;
}

.post .post-footer .meta a:hover {
    color: #ca2017;
}

.page-top .nav {
    text-transform: uppercase;
    font-size: 17px;
}

.post .post-title a {
    color: #000;
}

.page-top {
    height: 74px;
}

.page-top .nav a:hover {
    color: #ca2017;
}

.sidebar .social-links a:hover {
    color: #ca2017;
}

.icon-2x {
    font-size: 200%;
}

.info i {
    opacity: 1;
}

.post .post-footer .meta .info .date {
    margin-left: 0px;
}
span.text-disclaimer {
    font-size: 14px;
}

.post .post-footer {
    padding: 0 0 5px;
}

.tag, .category {
    display: inline-block;
    font-size: 14px;
}

@media screen and (max-width: 960px), print
{
    .page-top .nav li {
        font-size: 17px;
    }

    .navbar-burger {
        height: 4.6rem;
    }
}

.list-with-title .listing .listing-post a:hover {
    color: #ca2017;
}

.list-with-title .listing .listing-post a {
    color: #272822;
}

.projects li a {
    font-size: 12px !important;
    color: #ca2017 !important;
}

.projects li {
    list-style: none;
    display: inline;
}

.projects {
    margin-top: -20px;
    margin-bottom: -10px;
}

